tests/ui/privacy/legacy-ctor-visibility.stderr
error[E0423]: cannot find function, tuple struct or tuple variant `S` in this scope
  --> $DIR/legacy-ctor-visibility.rs:9:13
   |
LL |             S(10);
   |             ^
   |
   = note: a struct named `S` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
